feat: tweak more settings

--- a/kubernetes/main/apps/self-hosted/archiveteam/app/deployment.yaml
+++ b/kubernetes/main/apps/self-hosted/archiveteam/app/deployment.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: *app
 spec:
-  replicas: 15
+  replicas: 5
   selector:
     matchLabels:
       app: *app
@@ -32,4 +32,4 @@ spec:
       volumes:
         - name: cache-volume
           emptyDir:
-            sizeLimit: 4096Mi
+            sizeLimit: 5Gi
