--- a/kubernetes/shared/meta/components/common/sops/kustomization.yaml
+++ b/kubernetes/shared/meta/components/common/sops/kustomization.yaml
@@ -2,9 +2,5 @@
 # yaml-language-server: $schema=https://json.schemastore.org/kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: rook-ceph
-components:
-  - ../../flux/meta/components/common
-  - ../../../shared/meta/components/common
 resources:
-  - ./rook-ceph/ks.yaml
+  - ./secret.sops.yaml
