--- a/kubernetes/utility/flux/meta/components/common/kustomization.yaml
+++ b/kubernetes/utility/flux/meta/components/common/kustomization.yaml
@@ -3,4 +3,5 @@
 apiVersion: kustomize.config.k8s.io/v1alpha1
 kind: Component
 resources:
-  - ./namespace.yaml
+  ## Local Components
+  - ./cluster-vars
