--- a/kubernetes/utility/apps/self-hosted/kustomization.yaml
+++ b/kubernetes/utility/apps/self-hosted/kustomization.yaml
@@ -7,6 +7,7 @@ components:
   - ../../flux/meta/components/common
   - ../../../shared/meta/components/common
 resources:
+  - ./archiveteam/ks.yaml
   - ./free-game-notifier/ks.yaml
   - ./it-tools/ks.yaml
   - ./meshcentral/ks.yaml
