change PVC type

--- a/kubernetes/main/apps/flux-system/headlamp/app/helmrelease.yaml
+++ b/kubernetes/main/apps/flux-system/headlamp/app/helmrelease.yaml
@@ -55,10 +55,9 @@ spec:
               type: Prefix
     persistentVolumeClaim:
       enabled: true
-      accessModes:
-        - ReadWriteOnce
+      accessModes: ["ReadWriteMany"]
       size: 1Gi
-      storageClassName: ceph-block
+      storageClassName: ceph-filesystem
     volumeMounts:
       - mountPath: /build/plugins
         name: headlamp-plugins
