--- a/.taskfiles/bootstrap/Taskfile.yaml
+++ b/.taskfiles/bootstrap/Taskfile.yaml
@@ -5,13 +5,13 @@ version: '3'
 tasks:
 
   quick-strap:
-    desc: Do a bunch of commands in a row because I'm really tired of this shit
+    desc: Do a bunch of commands in a row because I'm really tired of this shit [CLUSTER=main] [CSI_DISK=required]
     cmds:
       - task: apply-config
       - task: talos
       - task: apps
     requires:
-      vars: [CLUSTER]
+      vars: [CLUSTER, CSI_DISK]
     preconditions:
       - op user get --me
       - talosctl config info
@@ -70,7 +70,9 @@ tasks:
       - which talosctl jq
 
   apps:
-    desc: Bootstrap Apps [CLUSTER=main]
+    desc: Bootstrap Apps [CLUSTER=main] [CSI_DISK=required]
+    summary: |
+      IMPORTANT: CSI_DISK must be set to the disk model used across all the nodes (e.g. WD_BLACK SN770 1TB)
     prompt: Bootstrap apps into the Talos cluster?
     cmds:
       - until kubectl wait nodes --for=condition=Ready=False --all --timeout=10m; do sleep 5; done
@@ -84,17 +86,19 @@ tasks:
     env:
       NODE_COUNT:
         sh: talosctl --talosconfig {{.TALOS_DIR}}/clusterconfig/talosconfig config info --output json | jq --raw-output '.nodes | length'
-      VAULT: kubernetes # ¯\_(ツ)_/¯
+      CSI_DISK: '{{.CSI_DISK}}'
       CLUSTER: '{{.CLUSTER}}'
       SHARED_DIR: '{{.SHARED_DIR}}'
       CLUSTER_DIR: '{{.CLUSTER_DIR}}'
     requires:
-      vars: [CLUSTER]
+      vars: [CLUSTER, CSI_DISK]
     preconditions:
       - op user get --me
       - talosctl --talosconfig {{.TALOS_DIR}}/clusterconfig/talosconfig config info
       - test -f {{.TALOS_DIR}}/clusterconfig/talosconfig
       - test -f {{.SHARED_DIR}}/bootstrap/helmfile.yaml
+      - test -f {{.SHARED_DIR}}/bootstrap/hooks/cilium-config.sh
+      - test -f {{.SHARED_DIR}}/bootstrap/hooks/prometheus-operator-crds.sh
+      - test -f {{.SHARED_DIR}}/bootstrap/hooks/wipe-csi-disk.sh
       - test -f {{.SHARED_DIR}}/bootstrap/templates/resources.yaml.j2
-      - test -f {{.SHARED_DIR}}/bootstrap/templates/wipe-rook.yaml.gotmpl
       - which curl jq helmfile kubectl op talosctl
