--- a/kubernetes/shared/bootstrap/helmfile.yaml
+++ b/kubernetes/shared/bootstrap/helmfile.yaml
@@ -14,6 +14,14 @@ repositories:
   - name: jetstack
     url: https://charts.jetstack.io
 
+hooks:
+  - events: ['prepare']
+    command: bash
+    args: ['{{ requiredEnv "SHARED_DIR" }}/bootstrap/hooks/prometheus-operator-crds.sh']
+  - events: ['prepare']
+    command: bash
+    args: ['{{ requiredEnv "SHARED_DIR" }}/bootstrap/hooks/wipe-csi-disk.sh']
+
 releases:
   - name: cilium
     namespace: kube-system
@@ -21,12 +29,9 @@ releases:
     version: 1.17.0
     values: ['{{ requiredEnv "CLUSTER_DIR" }}/apps/kube-system/cilium/app/helm-values.yaml']
     hooks:
-      - events: ['presync']
-        command: bash
-        args: ['{{ requiredEnv "SHARED_DIR" }}/bootstrap/scripts/cilium-presync.sh']
       - events: ['postsync']
         command: bash
-        args: ['{{ requiredEnv "SHARED_DIR" }}/bootstrap/scripts/cilium-postsync.sh']
+        args: ['{{ requiredEnv "SHARED_DIR" }}/bootstrap/hooks/cilium-config.sh']
 
   - name: coredns
     namespace: kube-system
@@ -49,19 +54,12 @@ releases:
     values: ['{{ requiredEnv "CLUSTER_DIR" }}/apps/external-secrets/external-secrets/app/helm-values.yaml']
     needs: ['cert-manager/cert-manager']
 
-  - name: wipe-rook
-    namespace: kube-system
-    chart: oci://ghcr.io/bjw-s/helm/app-template
-    version: 3.7.0
-    values: ['{{ requiredEnv "SHARED_DIR" }}/bootstrap/templates/wipe-rook.yaml.gotmpl']
-    needs: ['external-secrets/external-secrets']
-
   - name: flux-operator
     namespace: flux-system
     chart: oci://ghcr.io/controlplaneio-fluxcd/charts/flux-operator
     version: 0.13.0
     values: ['{{ requiredEnv "CLUSTER_DIR" }}/apps/flux-system/flux-operator/app/helm-values.yaml']
-    needs: ['kube-system/wipe-rook']
+    needs: ['external-secrets/external-secrets']
 
   - name: flux-instance
     namespace: flux-system
