--- a/kubernetes/utility/apps/observability/gatus/app/helmrelease.yaml
+++ b/kubernetes/utility/apps/observability/gatus/app/helmrelease.yaml
@@ -48,10 +48,10 @@ spec:
         containers:
           app:
             image:
-              repository: twinproduction/gatus
-              tag: experimental
-              # repository: ghcr.io/twin/gatus
-              # tag: v5.12.1@sha256:3cc4e90534c05599f07fbdf15580401aa7771fac15f51d1dc8f7de265d70d12f
+              # repository: twinproduction/gatus
+              # tag: experimental
+              repository: ghcr.io/twin/gatus
+              tag: v5.15.0@sha256:45686324db605e57dfa8b0931d8d57fe06298f52685f06aa9654a1f710d461bb
             env:
               TZ: ${TIMEZONE}
               GATUS_CONFIG_PATH: /config
@@ -73,7 +73,11 @@ spec:
             securityContext:
               allowPrivilegeEscalation: false
               readOnlyRootFilesystem: true
-              capabilities: { drop: ["ALL"] }
+              capabilities:
+                  drop:
+                  - ALL
+                  add:
+                  - "NET_RAW"
               sysctls:
               - name: net.ipv4.ping_group_range
                 value: 0 65536
