feat: move back to experimental image

--- a/kubernetes/utility/apps/observability/gatus/app/helmrelease.yaml
+++ b/kubernetes/utility/apps/observability/gatus/app/helmrelease.yaml
@@ -48,10 +48,10 @@ spec:
         containers:
           app:
             image:
-              # repository: twinproduction/gatus
-              # tag: experimental
-              repository: ghcr.io/twin/gatus
-              tag: v5.15.0@sha256:45686324db605e57dfa8b0931d8d57fe06298f52685f06aa9654a1f710d461bb
+              repository: twinproduction/gatus
+              tag: experimental
+              # repository: ghcr.io/twin/gatus
+              # tag: v5.15.0@sha256:45686324db605e57dfa8b0931d8d57fe06298f52685f06aa9654a1f710d461bb
             env:
               TZ: ${TIMEZONE}
               GATUS_CONFIG_PATH: /config
