--- a/kubernetes/shared/bootstrap/helmfile.yaml
+++ b/kubernetes/shared/bootstrap/helmfile.yaml
@@ -16,11 +16,8 @@ repositories:
 
 hooks:
   - events: ['prepare']
-    command: bash
-    args: ['{{ requiredEnv "SHARED_DIR" }}/bootstrap/hooks/prometheus-operator-crds.sh']
-  - events: ['prepare']
-    command: bash
-    args: ['{{ requiredEnv "SHARED_DIR" }}/bootstrap/hooks/wipe-csi-disk.sh']
+    command: '{{ requiredEnv "SHARED_DIR" }}/bootstrap/hooks/bootstrap.sh'
+    showlogs: true
 
 releases:
   - name: cilium
@@ -30,8 +27,8 @@ releases:
     values: ['{{ requiredEnv "CLUSTER_DIR" }}/apps/kube-system/cilium/app/helm-values.yaml']
     hooks:
       - events: ['postsync']
-        command: bash
-        args: ['{{ requiredEnv "SHARED_DIR" }}/bootstrap/hooks/cilium-config.sh']
+        command: '{{ requiredEnv "SHARED_DIR" }}/bootstrap/hooks/cilium-config.sh'
+        showlogs: true
 
   - name: coredns
     namespace: kube-system
@@ -65,6 +62,6 @@ releases:
     namespace: flux-system
     chart: oci://ghcr.io/controlplaneio-fluxcd/charts/flux-instance
     version: 0.13.0
-    wait: false
     values: ['{{ requiredEnv "CLUSTER_DIR" }}/apps/flux-system/flux-operator/instance/helm-values.yaml']
     needs: ['flux-system/flux-operator']
+    wait: false
