--- a/kubernetes/main/apps/games/minecraft/ks.yaml
+++ b/kubernetes/main/apps/games/minecraft/ks.yaml
@@ -28,7 +28,7 @@ spec:
 #   commonMetadata:
 #     labels:
 #       app.kubernetes.io/name: *app
-#  components:
+#   components:
 #    - ../../../../../shared/meta/components/gatus/external
 #    - ../../../../../shared/meta/components/volsync
 #   dependsOn:
@@ -48,36 +48,36 @@ spec:
 #   targetNamespace: games
 #   timeout: 5m
 #   wait: false
-# ---
-# # yaml-language-server: $schema=https://kube-schemas.pages.dev/kustomize.toolkit.fluxcd.io/kustomization_v1.json
-# apiVersion: kustomize.toolkit.fluxcd.io/v1
-# kind: Kustomization
-# metadata:
-#   name: &app minecraft-takocraft
-# spec:
-#   commonMetadata:
-#     labels:
-#       app.kubernetes.io/name: *app
-#  components:
-#    - ../../../../../shared/meta/components/gatus/external
-#    - ../../../../../shared/meta/components/volsync
-#   dependsOn:
-#     - name: onepassword-store
-#       namespace: external-secrets
-#   interval: 30m
-#   path: ./kubernetes/main/apps/games/minecraft/takocraft
-#   postBuild:
-#     substitute:
-#       APP: *app
-#       VOLSYNC_CAPACITY: 15Gi
-#   prune: true
-#   sourceRef:
-#     kind: GitRepository
-#     name: flux-system
-#     namespace: flux-system
-#   targetNamespace: games
-#   timeout: 5m
-#   wait: false
+---
+# yaml-language-server: $schema=https://kube-schemas.pages.dev/kustomize.toolkit.fluxcd.io/kustomization_v1.json
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: &app minecraft-takocraft
+spec:
+  commonMetadata:
+    labels:
+      app.kubernetes.io/name: *app
+  components:
+   - ../../../../../shared/meta/components/gatus/external
+   - ../../../../../shared/meta/components/volsync
+  dependsOn:
+    - name: onepassword-store
+      namespace: external-secrets
+  interval: 30m
+  path: ./kubernetes/main/apps/games/minecraft/takocraft
+  postBuild:
+    substitute:
+      APP: *app
+      VOLSYNC_CAPACITY: 15Gi
+  prune: true
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+    namespace: flux-system
+  targetNamespace: games
+  timeout: 5m
+  wait: false
 # ---
 # # yaml-language-server: $schema=https://kube-schemas.pages.dev/kustomize.toolkit.fluxcd.io/kustomization_v1.json
 # apiVersion: kustomize.toolkit.fluxcd.io/v1
@@ -88,7 +88,7 @@ spec:
 #   commonMetadata:
 #     labels:
 #       app.kubernetes.io/name: *app
-#  components:
+#   components:
 #    - ../../../../../shared/meta/components/gatus/external
 #    - ../../../../../shared/meta/components/volsync
 #   dependsOn:
