feat: change to paper?

--- a/kubernetes/main/apps/games/minecraft/takocraft/helmrelease.yaml
+++ b/kubernetes/main/apps/games/minecraft/takocraft/helmrelease.yaml
@@ -77,7 +77,7 @@ spec:
     minecraftServer:
       eula: true
       version: "1.21"
-      type: SPIGOT
+      type: PAPER
       overrideServerProperties: true
       jvmXXOpts: "-XX:MaxRAMPercentage=75"
       memory: 8192M
