chore: scale down mc

--- a/kubernetes/main/apps/games/kustomization.yaml
+++ b/kubernetes/main/apps/games/kustomization.yaml
@@ -5,8 +5,8 @@ namespace: games
 components:
   - ../../flux/meta/components/common
   - ../../../shared/meta/components/common
-resources:
+resources: []
   # - ./core-keeper/ks.yaml
-  - ./minecraft/ks.yaml
+  # - ./minecraft/ks.yaml
   # - ./palworld/ks.yaml
   # - ./vrising/ks.yaml
