feat(helmfile): migrate to single script with fancier tech

--- a/.taskfiles/bootstrap/Taskfile.yaml
+++ b/.taskfiles/bootstrap/Taskfile.yaml
@@ -98,4 +98,4 @@ tasks:
       - test -f {{.SHARED_DIR}}/bootstrap/hooks/prometheus-operator-crds.sh
       - test -f {{.SHARED_DIR}}/bootstrap/hooks/wipe-csi-disk.sh
       - test -f {{.SHARED_DIR}}/bootstrap/templates/resources.yaml.j2
-      - which curl jq helmfile kubectl op talosctl
+      - which curl gum jq helmfile kubectl kustomize op talosctl yq
