--- a/kubernetes/utility/apps/flux-system/flux-operator/instance/helm-values.yaml
+++ b/kubernetes/utility/apps/flux-system/flux-operator/instance/helm-values.yaml
@@ -16,6 +16,7 @@ instance:
     url: https://github.com/joryirving/home-ops.git
     ref: refs/heads/main
     path: kubernetes/utility/flux/cluster
+    interval: 1h
   commonMetadata:
     labels:
       app.kubernetes.io/name: flux
