fix: add dependency check to prepare script

--- a/.taskfiles/bootstrap/Taskfile.yaml
+++ b/.taskfiles/bootstrap/Taskfile.yaml
@@ -18,7 +18,7 @@ tasks:
       - test -f {{.TALOS_DIR}}/clusterconfig/talosconfig
       - test -f {{.SHARED_DIR}}/bootstrap/helmfile.yaml
       - test -f {{.SHARED_DIR}}/bootstrap/resources/prepare.sh
-      - which curl gum jq helmfile kubectl kustomize op talosctl yq
+      - which helmfile op talosctl
 
   gen-secrets:
     desc: Generate the Talos secrets
@@ -95,4 +95,4 @@ tasks:
       - test -f {{.TALOS_DIR}}/clusterconfig/talosconfig
       - test -f {{.SHARED_DIR}}/bootstrap/helmfile.yaml
       - test -f {{.SHARED_DIR}}/bootstrap/resources/prepare.sh
-      - which gum jq helmfile kubectl kustomize op talosctl yq
+      - which helmfile op talosctl
