feat: update folder paths

--- a/.taskfiles/bootstrap/Taskfile.yaml
+++ b/.taskfiles/bootstrap/Taskfile.yaml
@@ -16,8 +16,8 @@ tasks:
       - op user get --me
       - talosctl --talosconfig {{.TALOS_DIR}}/clusterconfig/talosconfig config info
       - test -f {{.TALOS_DIR}}/clusterconfig/talosconfig
-      - test -f {{.SHARED_DIR}}/bootstrap/helmfile.yaml
-      - test -f {{.SHARED_DIR}}/bootstrap/resources/prepare.sh
+      - test -f {{.BOOTSTRAP_DIR}}/helmfile.yaml
+      - test -f {{.BOOTSTRAP_DIR}}/resources/prepare.sh
       - which helmfile op talosctl
 
   gen-secrets:
@@ -31,6 +31,7 @@ tasks:
       vars: [CLUSTER]
     preconditions:
       - test -f {{.TALOS_DIR}}/talconfig.yaml
+      - which talhelper
     status:
       - test -f "{{.TALOS_DIR}}/talsecret.sops.yaml"
 
@@ -42,6 +43,7 @@ tasks:
     preconditions:
       - test -f {{.TALOS_DIR}}/talconfig.yaml
       - test -f {{.TALOS_DIR}}/talsecret.sops.yaml
+      - which talhelper
 
   apply-config:
     desc: Apply the Talos config on a nodes for a new cluster
@@ -52,6 +54,7 @@ tasks:
     preconditions:
       - test -f {{.TALOS_DIR}}/talconfig.yaml
       - test -f {{.TALOS_DIR}}/talsecret.sops.yaml
+      - which talhelper
 
   talos:
     desc: Bootstrap Talos [CLUSTER=main]
@@ -74,8 +77,8 @@ tasks:
       IMPORTANT: CSI_DISK must be set to the disk model used across all the nodes (e.g. WD_BLACK SN770 1TB)
     prompt: Bootstrap apps into the Talos cluster?
     cmds:
-      - bash {{.SHARED_DIR}}/bootstrap/resources/prepare.sh
-      - helmfile --file {{.SHARED_DIR}}/bootstrap/helmfile.yaml apply --skip-diff-on-install --suppress-diff --kube-context {{.CLUSTER}}
+      - bash {{.BOOTSTRAP_DIR}}/resources/prepare.sh
+      - helmfile --file {{.BOOTSTRAP_DIR}}/helmfile.yaml apply --skip-diff-on-install --suppress-diff --kube-context {{.CLUSTER}}
       - '{{if eq .NODE_COUNT 1}}talosctl --talosconfig {{.TALOS_DIR}}/clusterconfig/talosconfig reboot -n {{.TALOS_CONTROLLER}}{{end}}'
     vars:
       TALOS_CONTROLLER:
@@ -93,6 +96,6 @@ tasks:
       - op user get --me
       - talosctl --talosconfig {{.TALOS_DIR}}/clusterconfig/talosconfig config info
       - test -f {{.TALOS_DIR}}/clusterconfig/talosconfig
-      - test -f {{.SHARED_DIR}}/bootstrap/helmfile.yaml
-      - test -f {{.SHARED_DIR}}/bootstrap/resources/prepare.sh
+      - test -f {{.BOOTSTRAP_DIR}}/helmfile.yaml
+      - test -f {{.BOOTSTRAP_DIR}}/resources/prepare.sh
       - which helmfile op talosctl
