--- a/.taskfiles/talos/Taskfile.yaml
+++ b/.taskfiles/talos/Taskfile.yaml
@@ -13,7 +13,7 @@ tasks:
       - test -f {{.TALOS_DIR}}/talsecret.sops.yaml
 
   apply-node:
-    desc: Apply Talos config to a node [CLUSTER=main] [HOSTNAME=required]
+    desc: Apply Talos config to a node [CLUSTER=main] [HOSTNAME=required] [MODE=auto]
     dotenv: ['{{.TALOS_DIR}}/cluster.env']
     cmds:
       # - task: down
