--- a/kubernetes/main/apps/external-secrets/kustomization.yaml
+++ b/kubernetes/main/apps/external-secrets/kustomization.yaml
@@ -4,7 +4,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: external-secrets
 components:
-  - ../../flux/meta/components/common
+  - ../../components/common
   - ../../../shared/meta/components/common
 resources:
   - ./external-secrets/ks.yaml
