--- a/kubernetes/main/apps/actions-runner-system/kustomization.yaml
+++ b/kubernetes/main/apps/actions-runner-system/kustomization.yaml
@@ -4,7 +4,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: actions-runner-system
 components:
-  - ../../flux/meta/components/common
+  - ../../components/common
   - ../../../shared/meta/components/common
 resources:
   - ./actions-runner-controller/ks.yaml
