--- a/kubernetes/main/apps/cert-manager/kustomization.yaml
+++ b/kubernetes/main/apps/cert-manager/kustomization.yaml
@@ -4,7 +4,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: cert-manager
 components:
-  - ../../flux/meta/components/common
+  - ../../components/common
   - ../../../shared/meta/components/common
 resources:
   - ./cert-manager/ks.yaml
