--- a/kubernetes/main/apps/games/kustomization.yaml
+++ b/kubernetes/main/apps/games/kustomization.yaml
@@ -3,7 +3,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: games
 components:
-  - ../../flux/meta/components/common
+  - ../../components/common
   - ../../../shared/meta/components/common
 resources: []
   # - ./core-keeper/ks.yaml
