--- a/kubernetes/utility/apps/kube-tools/kustomization.yaml
+++ b/kubernetes/utility/apps/kube-tools/kustomization.yaml
@@ -4,7 +4,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: kube-tools
 components:
-  - ../../flux/meta/components/common
+  - ../../components/common
   - ../../../shared/meta/components/common
 resources:
   - ./fstrim/ks.yaml
