--- a/kubernetes/utility/apps/storage/kustomization.yaml
+++ b/kubernetes/utility/apps/storage/kustomization.yaml
@@ -4,7 +4,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: storage
 components:
-  - ../../flux/meta/components/common
+  - ../../components/common
   - ../../../shared/meta/components/common
 resources:
   - ./local-path-provisioner/ks.yaml
