--- a/.github/labeler.yaml
+++ b/.github/labeler.yaml
@@ -1,5 +1,7 @@
 ---
-# Area
+area/bootstrap:
+  - changed-files:
+      - any-glob-to-any-file: "bootstrap/**/*"
 area/docs:
   - changed-files:
       - any-glob-to-any-file:
@@ -10,6 +12,12 @@ area/github:
 area/kubernetes:
   - changed-files:
       - any-glob-to-any-file: kubernetes/**/*
+area/scripts:
+  - changed-files:
+      - any-glob-to-any-file: "scripts/**/*"
+area/talos:
+  - changed-files:
+      - any-glob-to-any-file: "kubernetes/**/talos/**/*"
 area/taskfile:
   - changed-files:
       - any-glob-to-any-file:
