--- a/.github/renovate/customManagers.json5
+++ b/.github/renovate/customManagers.json5
@@ -5,8 +5,8 @@
       "customType": "regex",
       "description": ["Process YAML custom dependencies"],
       "fileMatch": [
-        "(^|/)kubernetes/.+\\.env$",
-        "(^|/)kubernetes/.+\\.ya?ml$"
+        "(^|/).+\\.env$",
+        "(^|/).+\\.ya?ml$"
       ],
       "matchStrings": [
         // # renovate: datasource=github-releases depName=k3s-io/k3s
