--- a/kubernetes/main/flux/cluster/ks.yaml
+++ b/kubernetes/main/flux/cluster/ks.yaml
@@ -89,6 +89,7 @@ spec:
       target:
         group: kustomize.toolkit.fluxcd.io
         kind: Kustomization
+        labelSelector: "flux-patch!=ignore"
   postBuild:
     substituteFrom:
       - kind: ConfigMap
