--- a/.mise.toml
+++ b/.mise.toml
@@ -9,5 +9,6 @@ SOPS_AGE_KEY_FILE = '{{config_root}}/age.key'
 BOOTSTRAP_DIR = '{{config_root}}/bootstrap'
 SHARED_DIR = '{{config_root}}/kubernetes/shared'
 
-# Included file paths
-_.file = '{{config_root}}/.talos.env'
+_.file = [
+  '{{env.SHARED_DIR}}/components/system-upgrade/.env'
+]
