--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -12,7 +12,8 @@ vars:
   SHARED: '{{.ROOT_DIR}}/kubernetes/shared'
   TALOS_DIR: '{{.CLUSTER_DIR}}/talos'
 
-dotenv: ['{{.ROOT_DIR}}/.talos.env']
+dotenv:
+  - '{{.KUBERNETES_DIR}}/components/system-upgrade/.env'
 
 env:
   MINIJINJA_CONFIG_FILE: '{{.ROOT_DIR}}/.minijinja.toml'
