--- a/kubernetes/main/apps/kube-tools/system-upgrade-controller/ks.yaml
+++ b/kubernetes/main/apps/kube-tools/system-upgrade-controller/ks.yaml
@@ -9,7 +9,7 @@ spec:
     labels:
       app.kubernetes.io/name: *app
   components:
-    - ../../../../shared/meta/components/system-upgrade
+    - ../../../../../shared/meta/components/system-upgrade
   dependsOn:
     - name: node-feature-discovery
       namespace: kube-tools
