--- a/kubernetes/utility/apps/kube-tools/system-upgrade-controller/ks.yaml
+++ b/kubernetes/utility/apps/kube-tools/system-upgrade-controller/ks.yaml
@@ -9,7 +9,7 @@ spec:
     labels:
       app.kubernetes.io/name: *app
   components:
-    - ../../../../shared/meta/components/system-upgrade
+    - ../../../../../shared/meta/components/system-upgrade
   interval: 30m
   path: ./kubernetes/utility/apps/kube-tools/system-upgrade-controller/app
   prune: true
