feat: use alertmanager for gatus

--- a/kubernetes/shared/meta/components/gatus/external/config.yaml
+++ b/kubernetes/shared/meta/components/gatus/external/config.yaml
@@ -7,5 +7,5 @@ endpoints:
       dns-resolver: tcp://1.1.1.1:53
     conditions:
       - "[STATUS] == ${GATUS_STATUS:=200}"
-    alerts:
-      - type: discord
+    # alerts:
+    #   - type: discord
