--- a/kubernetes/shared/meta/components/gatus/guarded/config.yaml
+++ b/kubernetes/shared/meta/components/gatus/guarded/config.yaml
@@ -11,5 +11,5 @@ endpoints:
       query-type: A
     conditions:
       - "len([BODY]) == 0"
-    alerts:
-      - type: discord
+    # alerts:
+    #   - type: discord
