--- a/kubernetes/main/apps/observability/gatus/app/kustomization.yaml
+++ b/kubernetes/main/apps/observability/gatus/app/kustomization.yaml
@@ -7,6 +7,7 @@ resources:
   - ./grafana-dashboard.yaml
   - ./helmrelease.yaml
   - ./rbac.yaml
+  - ./prometheusrule.yaml
 configMapGenerator:
   - name: gatus-configmap
     files:
