--- a/kubernetes/main/apps/observability/gatus/app/prometheusrule.yaml
+++ b/kubernetes/main/apps/observability/gatus/app/prometheusrule.yaml
@@ -10,7 +10,7 @@ spec:
       rules:
         - alert: GatusEndpointDown
           expr: |
-            gatus_results_endpoint_success{group="${CLUSTER}$-external"} == 0
+            gatus_results_endpoint_success{group="${CLUSTER}-external"} == 0
           for: 5m
           annotations:
             summary: >
