--- a/kubernetes/utility/apps/observability/gatus/app/helmrelease.yaml
+++ b/kubernetes/utility/apps/observability/gatus/app/helmrelease.yaml
@@ -49,10 +49,8 @@ spec:
         containers:
           app:
             image:
-              repository: twinproduction/gatus
-              tag: experimental
-              # repository: ghcr.io/twin/gatus
-              # tag: v5.16.0@sha256:bb738c87cf2e2a08b8fff180cfc433e7b8b87bb1779c1fb1b00f8b748673e3c3
+              repository: ghcr.io/twin/gatus
+              tag: v5.16.0@sha256:bb738c87cf2e2a08b8fff180cfc433e7b8b87bb1779c1fb1b00f8b748673e3c3
             env:
               TZ: ${TIMEZONE}
               GATUS_CONFIG_PATH: /config
