feat: migrate icmp from gatus to bb-exporter

--- a/kubernetes/utility/apps/observability/exporters/blackbox-exporter/app/helmrelease.yaml
+++ b/kubernetes/utility/apps/observability/exporters/blackbox-exporter/app/helmrelease.yaml
@@ -70,7 +70,11 @@ spec:
       defaults:
         interval: 1m
       targets:
-        - { name: &name voyager.internal, module: icmp, url: *name }
-        - { name: &name pikvm.internal, module: icmp, url: *name }
-        - { name: &name celestia.internal, module: icmp, url: *name }
-        - { name: tessmart, module: icmp, url: "192.168.1.10" }
+        - { name: &name unifi.internal, module: icmp, url: *name }
+        - { name: &name ayaka.internal, module: icmp, url: *name }
+        - { name: &name eula.internal, module: icmp, url: *name }
+        - { name: &name ganyu.internal, module: icmp, url: *name }
+        - { name: &name hutao.internal, module: icmp, url: *name }
+        - { name: &name navia.internal, module: icmp, url: *name }
+        - { name: &name yelan.internal, module: icmp, url: *name }
+        - { name: &name jetkvm.internal, module: icmp, url: *name }
