--- a/kubernetes/utility/apps/observability/exporters/blackbox-exporter/ks.yaml
+++ b/kubernetes/utility/apps/observability/exporters/blackbox-exporter/ks.yaml
@@ -3,13 +3,13 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: &app smartctl-exporter
+  name: &app blackbox-exporter
 spec:
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
   interval: 30m
-  path: ./kubernetes/utility/apps/observability/smartctl-exporter/app
+  path: ./kubernetes/utility/apps/observability/exporters/blackbox-exporter/app
   prune: true
   sourceRef:
     kind: GitRepository
