--- a/kubernetes/utility/apps/observability/kustomization.yaml
+++ b/kubernetes/utility/apps/observability/kustomization.yaml
@@ -11,4 +11,5 @@ resources:
   - ./grafana/ks.yaml
   - ./kube-prometheus-stack/ks.yaml
   - ./network-ups-tools/ks.yaml
-  - ./smartctl-exporter/ks.yaml
+  # Exporters
+  - ./exporters
