fix: cleanup gatus ES

--- a/kubernetes/main/apps/observability/gatus/app/externalsecret.yaml
+++ b/kubernetes/main/apps/observability/gatus/app/externalsecret.yaml
@@ -5,25 +5,14 @@ kind: ExternalSecret
 metadata:
   name: &name gatus-secret
 spec:
+  secretStoreRef:
+    kind: ClusterSecretStore
+    name: crunchy-postgres
   target:
     name: *name
     template:
       data:
-        # App
-        DISCORD_WEBHOOK_URL: "{{ .DISCORD_WEBHOOK_URL }}"
-        SECRET_DOMAIN: ${SECRET_DOMAIN}
-        # Database
         POSTGRES_URI: '{{ index . "pgbouncer-uri" }}'
   dataFrom:
   - extract:
-      key: discord
-    sourceRef:
-       storeRef:
-         kind: ClusterSecretStore
-         name: onepassword
-  - extract:
       key: postgres-pguser-gatus
-    sourceRef:
-       storeRef:
-         kind: ClusterSecretStore
-         name: crunchy-postgres
