--- a/kubernetes/main/apps/observability/gatus/app/config/config.yaml
+++ b/kubernetes/main/apps/observability/gatus/app/config/config.yaml
@@ -1,9 +1,9 @@
 ---
 web:
-  port: ${WEB_PORT}
+  port: $${WEB_PORT}
 storage:
   type: postgres
-  path: ${POSTGRES_URI}?sslmode=require
+  path: $${POSTGRES_URI}?sslmode=require
   caching: true
 metrics: true
 debug: false
@@ -18,14 +18,14 @@ connectivity:
 endpoints:
   - name: status
     group: main-external
-    url: https://status.$${SECRET_DOMAIN}
+    url: https://status.${SECRET_DOMAIN}
     interval: 1m
     client:
       dns-resolver: tcp://1.1.1.1:53
     conditions: ["[STATUS] == 200"]
   - name: flux-webhook
     group: main-external
-    url: https://flux-webhook.$${SECRET_DOMAIN}
+    url: https://flux-webhook.${SECRET_DOMAIN}
     interval: 1m
     client:
       dns-resolver: tcp://1.1.1.1:53
@@ -33,4 +33,4 @@ endpoints:
 remote:
   instances:
     - endpoint-prefix: ""
-      url: "https://status-utility.$${SECRET_DOMAIN}/api/v1/endpoints/statuses"
+      url: "https://status-utility.${SECRET_DOMAIN}/api/v1/endpoints/statuses"
