--- a/kubernetes/main/apps/observability/gatus/app/kustomization.yaml
+++ b/kubernetes/main/apps/observability/gatus/app/kustomization.yaml
@@ -14,5 +14,5 @@ configMapGenerator:
       - ./config/config.yaml
 generatorOptions:
   disableNameSuffixHash: true
-  annotations:
-    kustomize.toolkit.fluxcd.io/substitute: disabled
+  # annotations:
+  #   kustomize.toolkit.fluxcd.io/substitute: disabled
