feat: fix label

--- a/kubernetes/main/flux/cluster/ks.yaml
+++ b/kubernetes/main/flux/cluster/ks.yaml
@@ -89,7 +89,7 @@ spec:
       target:
         group: kustomize.toolkit.fluxcd.io
         kind: Kustomization
-        labelSelector: "flux-patch!=ignore"
+        labelSelector: substitution.flux/enabled!=false
   postBuild:
     substituteFrom:
       - kind: ConfigMap
