--- a/kubernetes/utility/apps/kube-tools/system-upgrade-controller/ks.yaml
+++ b/kubernetes/utility/apps/kube-tools/system-upgrade-controller/ks.yaml
@@ -26,11 +26,12 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: &app system-upgrade-controller-plans
+  labels:
+    substitution.flux/enabled: false
 spec:
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
-      flux-patch: ignore
   dependsOn:
     - name: system-upgrade-controller
       namespace: kube-tools
