--- a/kubernetes/main/apps/kube-tools/system-upgrade-controller/ks.yaml
+++ b/kubernetes/main/apps/kube-tools/system-upgrade-controller/ks.yaml
@@ -8,6 +8,8 @@ spec:
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
+  components:
+    - ../../../../../shared/meta/components/system-upgrade
   dependsOn:
     - name: node-feature-discovery
       namespace: kube-tools
@@ -27,6 +29,8 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: &app system-upgrade-controller-plans
+  labels:
+    substitution.flux/enabled: false
 spec:
   commonMetadata:
     labels:
@@ -37,12 +41,9 @@ spec:
   interval: 30m
   path: ./kubernetes/main/apps/kube-tools/system-upgrade-controller/plans
   postBuild:
-    substitute:
-      TALOS_SCHEMATIC_ID: 97bf8e92fc6bba0f03928b859c08295d7615737b29db06a97be51dc63004e403
-      # renovate: datasource=docker depName=ghcr.io/siderolabs/installer
-      TALOS_VERSION: v1.9.4
-      # renovate: datasource=docker depName=ghcr.io/siderolabs/kubelet
-      KUBERNETES_VERSION: v1.32.2
+    substituteFrom:
+      - kind: ConfigMap
+        name: system-upgrade-plan-versions
   prune: true
   sourceRef:
     kind: GitRepository
