--- a/kubernetes/utility/flux/cluster/ks.yaml
+++ b/kubernetes/utility/flux/cluster/ks.yaml
@@ -89,6 +89,7 @@ spec:
       target:
         group: kustomize.toolkit.fluxcd.io
         kind: Kustomization
+        labelSelector: substitution.flux/enabled!=false
   postBuild:
     substituteFrom:
       - kind: ConfigMap
