--- a/kubernetes/utility/apps/observability/gatus/app/prometheusrule.yaml
+++ b/kubernetes/utility/apps/observability/gatus/app/prometheusrule.yaml
@@ -1,5 +1,5 @@
 ---
-# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/monitoring.coreos.com/prometheusrule_v1.json
+# yaml-language-server: $schema=https://kube-schemas.pages.dev/monitoring.coreos.com/prometheusrule_v1.json
 apiVersion: monitoring.coreos.com/v1
 kind: PrometheusRule
 metadata:
@@ -13,8 +13,8 @@ spec:
             gatus_results_endpoint_success{group="${CLUSTER}-external"} == 0
           for: 5m
           annotations:
-            summary: >
-              The Gatus endpoint {{ $labels.name }} is down
+            summary: >-
+              The {{ $labels.name }} endpoint is down
           labels:
             severity: critical
 
@@ -23,7 +23,7 @@ spec:
             gatus_results_endpoint_success{group="${CLUSTER}-guarded"} == 0
           for: 5m
           annotations:
-            summary: >
-              The Gatus endpoint {{ $labels.name }} has a public DNS record and is exposed
+            summary: >-
+              The {{ $labels.name }} endpoint has a public DNS record and is exposed
           labels:
             severity: critical
