feat: re-add prepare

--- a/bootstrap/helmfile.yaml
+++ b/bootstrap/helmfile.yaml
@@ -14,6 +14,11 @@ repositories:
   - name: jetstack
     url: https://charts.jetstack.io
 
+hooks:
+  - events: ['prepare']
+    command: '{{ requiredEnv "ROOT_DIR" }}/bootstrap/resources/prepare.sh'
+    showlogs: true
+
 releases:
   - name: cilium
     namespace: kube-system
