--- a/kubernetes/main/apps/observability/silence-operator/app/helmrelease.yaml
+++ b/kubernetes/main/apps/observability/silence-operator/app/helmrelease.yaml
@@ -75,7 +75,7 @@ spec:
               value: CPUThrottlingHigh
               isRegex: false
             - name: pod
-              value: kyoo-front-*
+              value: kyoo-front.*
               isRegex: true
       - apiVersion: monitoring.giantswarm.io/v1alpha1
         kind: Silence
