--- a/kubernetes/main/apps/database/crunchy-postgres/ks.yaml
+++ b/kubernetes/main/apps/database/crunchy-postgres/ks.yaml
@@ -8,6 +8,9 @@ spec:
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
+  dependsOn:
+    - name: csi-driver-nfs
+      namespace: storage
   interval: 30m
   path: ./kubernetes/main/apps/database/crunchy-postgres/app
   prune: true
@@ -33,6 +36,11 @@ spec:
       namespace: database
     - name: onepassword-store
       namespace: external-secrets
+  healthCheckExprs:
+    - apiVersion: postgres-operator.crunchydata.com/v1beta1
+      kind: PostgresCluster
+      failed: status.conditions.filter(e, e.type == 'ProxyAvailable').all(e, e.status == 'False')
+      current: status.conditions.filter(e, e.type == 'ProxyAvailable').all(e, e.status == 'True')
   interval: 30m
   path: ./kubernetes/main/apps/database/crunchy-postgres/cluster
   prune: true
@@ -56,6 +64,11 @@ spec:
   dependsOn:
     - name: crunchy-postgres-cluster
       namespace: database
+  healthCheckExprs:
+    - apiVersion: external-secrets.io/v1beta1
+      kind: ClusterSecretStore
+      failed: status.conditions.filter(e, e.type == 'Ready').all(e, e.status == 'False')
+      current: status.conditions.filter(e, e.type == 'Ready').all(e, e.status == 'True')
   interval: 30m
   path: ./kubernetes/main/apps/database/crunchy-postgres/stores
   prune: true
