--- a/kubernetes/main/apps/rook-ceph/rook-ceph/ks.yaml
+++ b/kubernetes/main/apps/rook-ceph/rook-ceph/ks.yaml
@@ -31,11 +31,11 @@ spec:
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
-  healthCheckExprs:
-    - apiVersion: ceph.rook.io/v1
-      kind: CephCluster
-      failed: status.conditions.filter(e, e.type == 'Ready').all(e, e.status == 'False')
-      current: status.conditions.filter(e, e.type == 'Ready').all(e, e.status == 'True')
+  # healthCheckExprs:
+  #   - apiVersion: ceph.rook.io/v1
+  #     kind: CephCluster
+  #     failed: status.conditions.filter(e, e.type == 'Ready').all(e, e.status == 'False')
+  #     current: status.conditions.filter(e, e.type == 'Ready').all(e, e.status == 'True')
   interval: 30m
   path: ./kubernetes/main/apps/rook-ceph/rook-ceph/cluster
   prune: false # never should be deleted
