--- a/kubernetes/main/apps/media/plex/ks.yaml
+++ b/kubernetes/main/apps/media/plex/ks.yaml
@@ -14,6 +14,8 @@ spec:
   dependsOn:
     - name: onepassword-store
       namespace: external-secrets
+    - name: rook-ceph-cluster
+      namespace: rook-ceph
     - name: volsync
       namespace: storage
   interval: 30m
@@ -45,16 +47,18 @@ spec:
   components:
     - ../../../../../shared/components/volsync
   dependsOn:
-    - name: plex
-      namespace: media
-    - name: tautulli
-      namespace: media
     - name: radarr
       namespace: downloads
     - name: sonarr
       namespace: downloads
     - name: onepassword-store
       namespace: external-secrets
+    - name: plex
+      namespace: media
+    - name: tautulli
+      namespace: media
+    - name: rook-ceph-cluster
+      namespace: rook-ceph
     - name: volsync
       namespace: storage
   interval: 30m
@@ -86,6 +90,8 @@ spec:
 #     - ../../../../../shared/components/gatus/external
 #     - ../../../../../shared/components/volsync
 #   dependsOn:
+#     - name: rook-ceph-cluster
+#       namespace: rook-ceph
 #     - name: plex
 #       namespace: media
 #   interval: 30m
@@ -167,6 +173,10 @@ spec:
   dependsOn:
     - name: onepassword-store
       namespace: external-secrets
+    - name: plex
+      namespace: media
+    - name: rook-ceph-cluster
+      namespace: rook-ceph
     - name: volsync
       namespace: storage
   interval: 30m
