--- a/kubernetes/main/apps/observability/kube-prometheus-stack/ks.yaml
+++ b/kubernetes/main/apps/observability/kube-prometheus-stack/ks.yaml
@@ -11,6 +11,8 @@ spec:
   dependsOn:
     - name: onepassword-store
       namespace: external-secrets
+    - name: rook-ceph-cluster
+      namespace: rook-ceph
   interval: 30m
   path: ./kubernetes/main/apps/observability/kube-prometheus-stack/app
   prune: true
