--- a/kubernetes/main/apps/rook-ceph/rook-ceph/ks.yaml
+++ b/kubernetes/main/apps/rook-ceph/rook-ceph/ks.yaml
@@ -31,13 +31,31 @@ spec:
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
-  # healthCheckExprs:
-  #   - apiVersion: ceph.rook.io/v1
-  #     kind: CephCluster
-  #     failed: status.conditions.filter(e, e.type == 'Ready').all(e, e.status == 'False')
-  #     current: status.conditions.filter(e, e.type == 'Ready').all(e, e.status == 'True')
+  components:
+    - ../../../../../shared/components/gatus/guarded
+  dependsOn:
+    - name: onepassword-store
+      namespace: external-secrets
+  healthChecks:
+    - apiVersion: helm.toolkit.fluxcd.io/v2
+      kind: HelmRelease
+      name: rook-ceph-cluster
+      namespace: rook-ceph
+    - apiVersion: ceph.rook.io/v1
+      kind: CephCluster
+      name: rook-ceph
+      namespace: rook-ceph
+  healthCheckExprs:
+    - apiVersion: ceph.rook.io/v1
+      kind: CephCluster
+      failed: status.ceph.health == 'HEALTH_ERR'
+      current: status.ceph.health == 'HEALTH_OK'
   interval: 30m
   path: ./kubernetes/main/apps/rook-ceph/rook-ceph/cluster
+  postBuild:
+    substitute:
+      APP: *app
+      GATUS_SUBDOMAIN: rook
   prune: false # never should be deleted
   sourceRef:
     kind: GitRepository
