--- a/kubernetes/main/apps/self-hosted/archiveteam/ks.yaml
+++ b/kubernetes/main/apps/self-hosted/archiveteam/ks.yaml
@@ -10,6 +10,9 @@ spec:
       app.kubernetes.io/name: *app
   components:
     - ../../../../../shared/components/gatus/guarded
+  dependsOn:
+    - name: rook-ceph-cluster
+      namespace: rook-ceph
   interval: 30m
   path: ./kubernetes/main/apps/self-hosted/archiveteam/app
   postBuild:
