--- a/kubernetes/main/apps/self-hosted/lubelog/ks.yaml
+++ b/kubernetes/main/apps/self-hosted/lubelog/ks.yaml
@@ -14,6 +14,8 @@ spec:
   dependsOn:
     - name: onepassword-store
       namespace: external-secrets
+    - name: rook-ceph-cluster
+      namespace: rook-ceph
     - name: volsync
       namespace: storage
   interval: 30m
