feat: deploy acars once I have secrets

--- a/kubernetes/utility/apps/self-hosted/kustomization.yaml
+++ b/kubernetes/utility/apps/self-hosted/kustomization.yaml
@@ -7,9 +7,12 @@ components:
   - ../../components/common
   - ../../../shared/components/common
 resources:
+  - ./acars/ks.yaml
   - ./archiveteam/ks.yaml
   - ./free-game-notifier/ks.yaml
   - ./it-tools/ks.yaml
   - ./meshcentral/ks.yaml
   - ./rss-forwarder/ks.yaml
   - ./thelounge/ks.yaml
+  ## Application Secrets
+  - ./acars-secret.yaml
