--- a/kubernetes/utility/apps/self-hosted/acars/app/helmrelease.yaml
+++ b/kubernetes/utility/apps/self-hosted/acars/app/helmrelease.yaml
@@ -92,7 +92,7 @@ spec:
               repository: ghcr.io/sdr-enthusiasts/acars_router
               tag: 1.3.1_linux_amd64
             env:
-              TZ: Etc/UTC
+              TZ: ${TIMEZOME}
               AR_SEND_UDP_ACARS: acars-acarshub:5550;${acarsdrama_acars}
               AR_SEND_UDP_VDLM2: acars-acarshub:5555;${acarsdrama_vdlm2}
               AR_RECV_ZMQ_VDLM2: acars-acarshub:45555
@@ -137,7 +137,7 @@ spec:
               repository: ghcr.io/sdr-enthusiasts/docker-acarshub
               tag: v3.8.0Build1379_nohealthcheck
             env:
-              TZ: Etc/UTC
+              TZ: ${TIMEZOME}
               ENABLE_ADSB: "false"
               ENABLE_ACARS: external
               # ENABLE_VDLM: external
