--- a/kubernetes/utility/apps/self-hosted/acars/app/helmrelease.yaml
+++ b/kubernetes/utility/apps/self-hosted/acars/app/helmrelease.yaml
@@ -93,8 +93,8 @@ spec:
               tag: 1.3.1_linux_amd64
             env:
               TZ: ${TIMEZOME}
-              AR_SEND_UDP_ACARS: acars-acarshub:5550;${acarsdrama_acars}
-              AR_SEND_UDP_VDLM2: acars-acarshub:5555;${acarsdrama_vdlm2}
+              AR_SEND_UDP_ACARS: acars-acarshub:5550; #${acarsdrama_acars}
+              AR_SEND_UDP_VDLM2: acars-acarshub:5555; #${acarsdrama_vdlm2}
               AR_RECV_ZMQ_VDLM2: acars-acarshub:45555
             resources:
               requests:
