--- a/kubernetes/utility/apps/self-hosted/acars/ks.yaml
+++ b/kubernetes/utility/apps/self-hosted/acars/ks.yaml
@@ -24,6 +24,11 @@ spec:
   postBuild:
     substitute:
       APP: *app
+      CLUSTER: utility
+      PVC_VOLSYNC_STORAGECLASS: local-hostpath
+      VOLSYNC_SNAPSHOTCLASS: csi-local-hostpath
+      VOLSYNC_CACHE_SNAPSHOTCLASS: local-hostpath
+      VOLSYNC_STORAGECLASS: local-hostpath
     substituteFrom:
       - kind: Secret
         name: acars
