feat: migrate to sops for now

--- a/kubernetes/utility/components/common/cluster-vars/cluster-secrets.sops.yaml
+++ b/kubernetes/utility/components/common/cluster-vars/cluster-secrets.sops.yaml
@@ -5,6 +5,8 @@ metadata:
     namespace: flux-system
 stringData:
     #ENC[AES256_GCM,data:xxnbfu67wgLvZ0PqTcNN0Q==,iv:LasA5aqx6l471zjQEEVJuPHGUWr+meE1DKMask3+Zb4=,tag:hgtvtQXcoMaInOpBa++mgw==,type:comment]
+    ACARSDRAMA_ACARS: ENC[AES256_GCM,data:LmSp5rJvyodpGmISutdjtX29Xq5+Np/8Qg/V,iv:fnfpuUKSRe1NlOepArItZriJh1O0n5hoJvdtf70p5LE=,tag:9IfLc/Gu0tS0EK3nX2zhpQ==,type:str]
+    ACARSDRAMA_VDLM2: ENC[AES256_GCM,data:J1S2UWZruEZm/uZgULDpxzaMPqyCkf2YUO9+,iv:x4jwinogeyZw+Qo/nxgLp1yQdphOUU9JwMGvrZJIKn0=,tag:n5p/0UAdoXnFtZcfk9CCXw==,type:str]
     SVC_KUBE_API: ENC[AES256_GCM,data:1xuWFAd9erkdB2k=,iv:4XbfZDQo229gVI0Kl62bic9JzHG1RH9HzMJCzlyosMg=,tag:VRbg7B8YBxVtzRW4Xoxj9w==,type:str]
     SVC_NGINX_INTERNAL: ENC[AES256_GCM,data:ilfw6QhaTh0U7UU=,iv:eJ7/LGu8IZZjWJvDcl0DCAiavC8gf0gO8MTyQ04q3Ck=,tag:Feg8UOuivAv2gyeSh4OuCA==,type:str]
     SVC_NGINX_EXTERNAL: ENC[AES256_GCM,data:EEnrrSfroxhmdK0=,iv:A2CoFRYWGqyWYD/825xZ62Ppl9Rd1fAdDTC1iIoCFEE=,tag:DBn3cz0JIFxlbQILnLoegw==,type:str]
@@ -25,8 +27,8 @@ sops:
             ZjkzSGxlT1R6VHNHNDVNb3hBVzNVZ3MKMtBhVS0FKr6NWqv9S6mSOhjCDIdO3uNz
             OS9Qh8tX5J/s1ZH6z3/DNLWKonA6mccm1kH7jNQe/+w4ozYxa4me9Q==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-02-02T20:49:55Z"
-    mac: ENC[AES256_GCM,data:16oNf5u7kIG5rg+NIeaWdE4ExCF29bC1noaSl/EucSmvPRR1oh8cFR4qZ3iJCA8V0GShMh7jjyFFf/YLi5Kp1JJYucFtbGm8/rnktYGd5kwcT3QWj1tq7K7yr+wgoY+l1aEaSXyXSCkGSoWYfWIPwgRmY2CM+eXtqs5vhDpaMrU=,iv:ZQI3FYxSXYYhkXXGW4axiXzb7hR2ae4GuMGtmzKfAXc=,tag:EbIPc+j+SHgvFzTX5Kwppw==,type:str]
+    lastmodified: "2025-02-21T22:28:21Z"
+    mac: ENC[AES256_GCM,data:Pu0X0R3ou47n48ky7JeoGyJ9ekluYBaOBJo6WR15FWn0P3X520TjE8t7C1sPpLl74znatMPK05p5IMjISMFUf45FdmI26thu3dCJBCBY/W0TOoMrQdCxGtX6AB38nz19xpmwsPZ81xgexz8N5XJX9ujJDs/6/UQz4lidJeQw7GE=,iv:GvLM2mpXHbzsBr4oH3jzWFFzMmnI9X6D7ZqDoON1tBo=,tag:GpBzZ5J/9I/DIxPgxBe2Rw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
-    version: 3.9.3
+    version: 3.9.4
