chore: bump images

--- a/kubernetes/utility/apps/self-hosted/acars/app/helmrelease.yaml
+++ b/kubernetes/utility/apps/self-hosted/acars/app/helmrelease.yaml
@@ -90,7 +90,7 @@ spec:
           acarsrouter:
             image:
               repository: ghcr.io/sdr-enthusiasts/acars_router
-              tag: 1.3.1_linux_amd64
+              tag: latest-build-494
             env:
               TZ: ${TIMEZOME}
               AR_SEND_UDP_ACARS: acars-acarshub:5550;${ACARSDRAMA_ACARS}
@@ -111,7 +111,7 @@ spec:
           acarshub:
             image:
               repository: ghcr.io/tyzbit/acars-annotator
-              tag: latest
+              tag: v0.1.4
             env:
               ACARSHUB_HOST: acars-acarshub
               ACARSHUB_PORT: "15550"
@@ -134,7 +134,7 @@ spec:
           acarshub:
             image:
               repository: ghcr.io/sdr-enthusiasts/docker-acarshub
-              tag: v3.8.0Build1379_nohealthcheck
+              tag: v3.8.1Build1381_nohealthcheck
             env:
               TZ: ${TIMEZOME}
               ENABLE_ADSB: "false"
