fix: update env vars

--- a/kubernetes/utility/apps/self-hosted/acars/app/externalsecret.yaml
+++ b/kubernetes/utility/apps/self-hosted/acars/app/externalsecret.yaml
@@ -12,7 +12,9 @@ spec:
     name: *name
     template:
       data:
-        WEBHOOK_URL: "{{ .DISCORD_WEBHOOK }}"
+        DISCORD_WEBHOOK_URL: "{{ .DISCORD_WEBHOOK }}"
+        ADBSEXCHANGE_APIKEY: "{{ .ADBSEXCHANGE_APIKEY }}"
+        ADBSEXCHANGE_REFERENCE_GEOLOCATION: "{{ .LATITUDE }},{{ .LONGITUDE }}"
   dataFrom:
   - extract:
       key: acars
