fix: once more, with gusto

--- a/kubernetes/utility/apps/self-hosted/acars/app/helmrelease.yaml
+++ b/kubernetes/utility/apps/self-hosted/acars/app/helmrelease.yaml
@@ -115,7 +115,7 @@ spec:
             env:
               ACARSHUB_HOST: acars-acarshub
               ACARSHUB_PORT: "15550"
-              ANNOTATE_ACARS: "false"
+              ANNOTATE_ACARS: "true"
               LOGLEVEL: debug
             envFrom:
               - secretRef:
