feat: add csi-driver-nfs to utility cluster

--- a/kubernetes/shared/repositories/helm/kustomization.yaml
+++ b/kubernetes/shared/repositories/helm/kustomization.yaml
@@ -9,6 +9,7 @@ resources:
   - ./cilium.yaml
   - ./controlplaneio.yaml
   - ./coredns.yaml
+  - ./csi-driver-nfs.yaml
   - ./descheduler.yaml
   - ./external-dns.yaml
   - ./external-secrets.yaml
