--- a/kubernetes/utility/apps/storage/csi-driver-nfs/app/helmrelease.yaml
+++ b/kubernetes/utility/apps/storage/csi-driver-nfs/app/helmrelease.yaml
@@ -30,7 +30,7 @@ spec:
       name: nfs-slow
       parameters:
         server: voyager.internal
-        share: /mnt/user/kubernetes #HDD ZFS Pool
+        share: /mnt/user/spool-share #SAS SSD ZFS Mirror pool
       mountOptions:
         - nfsvers=4.2
         - nconnect=16
