--- a/kubernetes/utility/apps/storage/csi-driver-nfs/ks.yaml
+++ b/kubernetes/utility/apps/storage/csi-driver-nfs/ks.yaml
@@ -3,29 +3,18 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: &app acars
+  name: &app csi-driver-nfs
 spec:
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
-  components:
-    - ../../../../../shared/components/gatus/external
-    - ../../../../../shared/components/volsync
-  dependsOn:
-    - name: node-feature-discovery-features
-      namespace: kube-tools
-    - name: volsync
-      namespace: storage
   interval: 30m
-  path: ./kubernetes/utility/apps/self-hosted/acars/app
-  postBuild:
-    substitute:
-      APP: *app
+  path: ./kubernetes/main/apps/storage/csi-driver-nfs/app
   prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
     namespace: flux-system
-  targetNamespace: self-hosted
+  targetNamespace: storage
   timeout: 5m
   wait: false
