--- a/kubernetes/utility/apps/storage/kustomization.yaml
+++ b/kubernetes/utility/apps/storage/kustomization.yaml
@@ -7,6 +7,7 @@ components:
   - ../../components/common
   - ../../../shared/components/common
 resources:
+  - ./csi-driver-nfs/ks.yaml
   - ./local-path-provisioner/ks.yaml
   - ./snapshot-controller/ks.yaml
   - ./volsync/ks.yaml
